cmake_minimum_required(VERSION 3.2)
set(CXX_STANDARD_REQUIRED 2a)
option(TESTS "Default Tests are off" OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(COMPILE_FLAGS std+=20)
add_subdirectory(./lib/googletest)
add_subdirectory(./lib/benchmark)
project(libnum_test)
include_directories(${PROJECT_SOURCE_DIR}/libnum)
add_executable(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/test/test_concept_compilation.cc)
target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
if(TEST)
    add_executable(libnum_benchmarks ${PROJECT_SOURCE_DIR}/test/benchmarks.cc)
    target_link_libraries(libnum_benchmarks PUBLIC benchmark::benchmark)
    target_compile_features(libnum_benchmarks PUBLIC cxx_std_20)
endif()