cmake_minimum_required(VERSION 3.2)
cmake_policy(SET CMP0064 OLD)
set(CXX_STANDARD_REQUIRED 2a)
option(TESTS "Default Tests are off" OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(COMPILE_FLAGS std+=20)
project(libnum_test)
include_directories(${PROJECT_SOURCE_DIR}/libnum)
add_executable(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/test/test_concept_compilation.cc)
target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
if(TESTS)
    add_subdirectory(./lib/googletest)
    add_subdirectory(./lib/benchmark)
    add_executable(libnum_benchmarks ${PROJECT_SOURCE_DIR}/test/benchmarks.cc)
    target_link_libraries(libnum_benchmarks PUBLIC benchmark::benchmark)
    target_compile_features(libnum_benchmarks PUBLIC cxx_std_20)
endif()